# fpse

./: .gitignore  README.md  package-lock.json  package.json
client/: bsconfig.json  package-lock.json  package.json  tailwind.config.js
client/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  App.cmi  App.cmt  App.mlmap  build.ninja  install.ninja
client/lib/bs/src/: App-App.cmi  App-App.cmt  App.ast  (+5 more)
client/src/: App.bs.js  App.res  Index.res
client/src/components/: FeedList.res  Header.bs.js  Header.res  Redirect.res  UrlList.bs.js  UrlList.res
client/src/pages/: ErrorPage.bs.js  ErrorPage.res  HomePage.bs.js  HomePage.res  SignInPage.bs.js  SignInPage.res  UserPage.res
client/src/utils/: Endpoints.res  Types.res
server/: database.db  dune-project  url-shortener.opam
server/_build/: .db  .digest-db  .to-promote  log
server/_build/default/: url-shortener.dune-package  url-shortener.install  url-shortener.opam
server/_build/default/.dune/: configurator  configurator.v2
server/_build/default/src/: dune  lib.cma  lib.cmxa  lib.cmxs  lib.mli
server/_build/default/src/.app.eobjs/byte/: dune__exe__App.cmi  dune__exe__App.cmo  dune__exe__App.cmt
server/_build/default/src/.app.eobjs/native/: dune__exe__App.cmx
server/_build/default/src/.formatted/: app.ml  lib.mli
server/_build/default/src/.lib.objs/byte/: lib.cmi  lib.cmti
server/_build/default/src/.merlin-conf/: exe-app  lib-lib
server/_build/install/default/lib/url-shortener/: META  dune-package  opam
server/src/: app.ml  dune  lib.ml  lib.mli  test.ml
server/tests/: dune  tests.ml
(+27 files in other folders)
