(lang dune 2.9)

(generate_opam_files true)

(authors "Kevin Velasquez" "Fernando Nova")

(maintainers "kvelasq1@jhu.edu" "fnova1@jhu.edu")

(package
 (name "url-shortener")
 (synopsis "URL Shortener Social Network")
 (description "Shortern URLs and share with your friends")
 (depends
  (dune
   (>= 2.9))
  (core
   (>= .0.14.1))
  (postgresql
   (>= 5.0.0))
  (dream
   (>= 1.0.0~alpha2))))
