(library
 (name lib)
 (modules lib)
 (libraries core sqlite3 yojson)
 (preprocess
   (pps lwt_ppx ppx_yojson_conv)))

(executable
 (name app)
 (modules app)
 (libraries core lib dream)
 (preprocess
   (pps lwt_ppx ppx_yojson_conv)))

(executable
  (name test)
  (modules test)
  (libraries core lib sqlite3 ounit2 yojson)
  (preprocess
    (pps lwt_ppx ppx_yojson_conv)))
